remove mass-quoting buttons from popup add paste button to reply box fix linebreaks in copypastas json add spotKym into mutation observer again (accidentally removed before) detect when no valid post gets found in check em and kym mass quotes make comment textarea larger per default remove massQuote.js because it's not needed anymore

--- a/src/css/content.css
+++ b/src/css/content.css
@@ -8,6 +8,11 @@
   font-weight: bold;
 }
 
+.comtxt {
+  height: 10em;
+  width: 55em;
+}
+
 #sneed-btn {
   color: red;
 }
